force-app/main/default/objects/Route_Street__c/Route_Street__c.object-meta.xml
<CustomObject>
    <label>Route Street</label>
    <nameField>
        <label>Route Street Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Streets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>