force-app/main/default/objects/Route_Street__c/fields/First_Direction__c.field-meta.xml
<CustomField>
        <fullName>First_Direction__c</fullName>
        <label>First Direction</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>