force-app/main/default/objects/Route_Street__c/fields/From__c.field-meta.xml
<CustomField>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </CustomField>