force-app/main/default/objects/Route_Street__c/fields/House_High__c.field-meta.xml
<CustomField>
        <fullName>House_High__c</fullName>
        <label>House High</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>