force-app/main/default/objects/Route_Street__c/fields/Publication__c.field-meta.xml
<CustomField>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>