force-app/main/default/objects/Route_Street__c/fields/Route__c.field-meta.xml
<CustomField>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route Streets</relationshipLabel>
        <relationshipName>Route_Streets</relationshipName>
        <type>Lookup</type>
    </CustomField>