force-app/main/default/objects/Route_Street__c/fields/Second_Direction__c.field-meta.xml
<CustomField>
        <fullName>Second_Direction__c</fullName>
        <label>Second Direction</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>