force-app/main/default/objects/Route_Street__c/fields/Street_Id__c.field-meta.xml
<CustomField>
        <fullName>Street_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Identifier of record in DSI</description>
        <externalId>true</externalId>
        <label>Street Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>