force-app/main/default/objects/Route_Street__c/fields/Street_Name__c.field-meta.xml
<CustomField>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>