force-app/main/default/objects/Route_Street__c/fields/Street_Suffix__c.field-meta.xml
<CustomField>
        <fullName>Street_Suffix__c</fullName>
        <label>Street Suffix</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>