force-app/main/default/objects/Route_Street__c/fields/ZIP__c.field-meta.xml
<CustomField>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>